<resources>
    <string name="app_name">Impact Hub</string>
    <string name="impact_hub_account_type">net.impacthub.app</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="notifications">Notifications</string>
    <string name="profile">My Profile</string>
    <string name="projects">Projects</string>
    <string name="members">Members</string>
    <string name="companies">Companies</string>
    <string name="goals">Goals</string>
    <string name="jobs">Jobs</string>
    <string name="events">Events</string>
    <string name="messages">Messages</string>
    <string name="sender_name">Sender\'s name</string>
    <string name="read_indicator">Read indicator</string>
    <string name="error_top">Something went wrong.\nThe message I got was…</string>
    <string name="error_bottom">Would you like to retry</string>
    <string name="error_now">Now</string>
    <string name="error_or">or</string>
    <string name="error_later">Later</string>
    <string name="type_something">Type something…</string>
    <string name="send">Send</string>
    <string name="member">Member</string>
    <string name="locations">Locations</string>
    <string name="filter_on">Filter on</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="select">Select</string>
    <string name="clear_all">Clear All</string>
    <string name="city">CITY</string>
    <string name="all">All</string>
    <string name="sector">SECTOR</string>
    <string name="done">Done</string>
    <string name="member_image">Member image</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="arrow_down">Scroll down indicator</string>
    <string name="about">ABOUT</string>
    <string name="my_skills">MY SKILLS</string>
    <string name="image">Image</string>
    <string name="groups">GROUPS</string>
    <string name="projects_heading">PROJECTS</string>
    <string name="connect_with">Connect with %s</string>

    <!-- Menu Titles-->
    <string name="label_members">Members</string>
    <string name="label_companies">Companies</string>
    <string name="label_groups">Groups</string>
    <string name="label_goals">Impact Goals</string>
    <string name="label_jobs">Jobs</string>
    <string name="label_events">Events</string>
    <string name="label_projects">Projects</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_conversation">Conversation</string>
    <string name="label_contact">Contact</string>
    <string name="label_member_detail">Member Detail</string>
    <string name="label_comments">Comments</string>
</resources>
