<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Lightful. All Rights Reserved.
  ~
  ~ Save to the extent permitted by law, you may not use, copy, modify,
  ~ distribute or create derivative works of this material or any part
  ~ of it without the prior written consent of Lightful.
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_back_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBackground" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:background="@color/colorWhite"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/htab_collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorWhite"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:titleEnabled="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/image_company_banner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_gravity="bottom"
                        android:contentDescription="@string/member_image"
                        android:src="@drawable/fade_to_light_dark_gradient" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.v7.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:padding="3dp"
                                app:cardPreventCornerOverlap="false"
                                app:cardUseCompatPadding="false"
                                app:cardCornerRadius="48dp"
                                app:cardElevation="6dp">

                            <net.impacthub.members.ui.widgets.CircleImageView
                                android:id="@+id/image_detail"
                                android:layout_width="96dp"
                                android:layout_height="96dp"
                                android:contentDescription="@string/member_image"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/ic_fp_40px" />

                            </android.support.v7.widget.CardView>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="16dp"
                                android:orientation="vertical"
                                android:padding="4dp">

                                <LinearLayout
                                    android:id="@+id/connect_buttons"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageButton
                                        android:id="@+id/button_twitter"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="@dimen/connect_button_gap"
                                        android:background="@null"
                                        android:contentDescription="@string/twitter"
                                        android:src="@mipmap/twitter" />

                                    <ImageButton
                                        android:id="@+id/button_facebook"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="@dimen/connect_button_gap"
                                        android:background="@null"
                                        android:contentDescription="@string/facebook"
                                        android:src="@mipmap/facebook" />

                                    <ImageButton
                                        android:id="@+id/button_linkedin"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="@dimen/connect_button_gap"
                                        android:background="@null"
                                        android:contentDescription="@string/linkedin"
                                        android:src="@mipmap/linkedin" />

                                    <ImageButton
                                        android:id="@+id/button_instagram"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:background="@null"
                                        android:contentDescription="@string/instagram"
                                        android:src="@mipmap/instagram" />

                                </LinearLayout>

                                <net.impacthub.members.ui.widgets.TypefaceTextView
                                    android:id="@+id/button_website"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:background="@drawable/bg_rounded_primary"
                                    android:gravity="center"
                                    android:padding="12dp"
                                    android:text="Visit Website"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp"
                                    app:typeface="fonts/gt-walsheim-web.ttf"
                                    tools:showIn="@layout/fragment_filters" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:gravity="center"
                            android:orientation="vertical">


                            <net.impacthub.members.ui.widgets.TypefaceTextView
                                android:id="@+id/text_company_sector"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Non Profit"
                                android:textColor="@color/colorWhite"
                                android:textSize="14sp"
                                app:typeface="fonts/gt-walsheim-medium-web.ttf" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="16dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/map_pin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/item_text_top_margin"
                                    android:contentDescription="@string/locations"
                                    android:src="@mipmap/location_pin" />

                                <net.impacthub.members.ui.widgets.TypefaceTextView
                                    android:id="@+id/locations"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="@dimen/item_text_top_margin"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:paddingTop="2dp"
                                    android:text="London, UK"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="12sp"
                                    app:typeface="fonts/gt-walsheim-light-web.ttf" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabIndicatorHeight="1dp"
                app:tabMode="fixed" />

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include layout="@layout/layout_top_shadow" />
        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>