<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Lightful. All Rights Reserved.
  ~
  ~ Save to the extent permitted by law, you may not use, copy, modify,
  ~ distribute or create derivative works of this material or any part
  ~ of it without the prior written consent of Lightful.
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_back_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorBackground" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/htab_collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorWhite"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp"
                    app:layout_collapseMode="parallax">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <net.impacthub.members.ui.widgets.CircleImageView
                            android:id="@+id/image_detail"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_margin="4dp"
                            android:contentDescription="@string/member_image"
                            android:scaleType="centerCrop"
                            tools:src="@drawable/ic_fp_40px" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@color/colorBackground" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <LinearLayout
                                android:id="@+id/connect_buttons"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <ImageButton
                                    android:id="@+id/button_twitter"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/connect_button_gap"
                                    android:background="@null"
                                    android:contentDescription="@string/twitter"
                                    android:src="@mipmap/twitter" />

                                <ImageButton
                                    android:id="@+id/button_facebook"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/connect_button_gap"
                                    android:background="@null"
                                    android:contentDescription="@string/facebook"
                                    android:src="@mipmap/facebook" />

                                <ImageButton
                                    android:id="@+id/button_linkedin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/connect_button_gap"
                                    android:background="@null"
                                    android:contentDescription="@string/linkedin"
                                    android:src="@mipmap/linkedin" />

                                <ImageButton
                                    android:id="@+id/button_instagram"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:contentDescription="@string/instagram"
                                    android:src="@mipmap/instagram" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/container_connect"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bg_rounded_primary"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:layout_marginTop="4dp"
                                android:paddingBottom="8dp"
                                android:paddingTop="8dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/ic_notification_contact_request"
                                    android:tint="@color/colorWhite" />

                                <net.impacthub.members.ui.widgets.TypefaceTextView
                                    android:id="@+id/done"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="12dp"
                                    android:gravity="center"
                                    android:text="Connect"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp"
                                    app:typeface="fonts/gt-walsheim-web.ttf"
                                    tools:showIn="@layout/fragment_filters" />

                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:orientation="vertical">


                        <net.impacthub.members.ui.widgets.TypefaceTextView
                            android:id="@+id/text_profession"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Marketing Consultant at Equinox Consultant"
                            android:textColor="@color/greyish_brown_2"
                            android:textSize="14sp"
                            app:typeface="fonts/gt-walsheim-light-web.ttf" />

                        <include
                            layout="@layout/layout_info_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp" />

                        <net.impacthub.members.ui.widgets.TypefaceTextView
                            android:id="@+id/about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="3"
                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. adipiscing elit, sed do eiusmod tempor."
                            android:textColor="@color/steel_grey"
                            android:textSize="15sp"
                            app:typeface="fonts/gt-walsheim-light-web.ttf" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabIndicatorHeight="1dp"
                app:tabMode="fixed" />

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include layout="@layout/layout_top_shadow" />
        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>